added all tables and lookup data

--- a/lib/function/saveWondeSchool/package.json
+++ b/lib/function/saveWondeSchool/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "latest",
-    "uuid": "latest"
+    "uuid": "latest",
+    "csv-parser": "latest"
   }
 }
